# dnc-torch-zeligism-fork

./: FILES  adapted.py  brain_framework.md  dnc.py  dnc_adapted.py  interface_adapted.py  memory.py  memory_adapted.py  original.py  pyproject.toml  repeat_copy.py  stackable_dnc.py  test_adaptation.py  test_complete_initialization.py  test_forward_pass.py  train.py  training_configs.py
dnc/: base.py  controller.py  interface.py  memory.py  mixins.py  utils.py
dnc_architecture_graves_2016/: dnc_module.py  interface.py  memory.py  memory_config.py  repeat_copy.py  train.py  training_config.py
dnc_torch_zeligism/: ARCHITECTURE.md  dnc.py  memory.py  o.txt  plot_o_txt.py  pyproject.toml  repeat_copy.py  train.py  train_output.txt
dnc_torch_zeligism_polymorphic/: __init__.py  configuration.py  dnc_adapted.out  dnc_adapted.py  memory_adapted.py  memory_adapted_out.py  parallel_controller.py  parallel_controller_moe.py  parallel_single_controller.py  repeat_copy.py  rms_norm_layer.py  stacked_controller.py  test_memory_adapted.py  test_parallel.py  train_adapted.out  train_adapted.py  train_moe.py  train_parallel.py  train_stacked.py  training_configs.py
dnc_torch_zeligism_polymorphic/run1/: out_nbmem=1  parallel_controller.py
dnc_torch_zeligism_polymorphic/run2/: out_nbmem=1  out_nbmem=3
