[project]
name = "dnc-torch-zeligism"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.20.0",
    "einops>=0.8.1",
    "equinox>=0.11.11",
    "hydra-core>=1.3.2",
    "jaxtyping>=0.2.38",
    "numpy>=2.2.3",
    "torch>=2.6.0",
    "typeguard>=4.4.2",
]

[tool.ruff.lint]
ignore = [
	"F722", # forward annotation
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.sdist]
include = ["dnc"]

[tool.hatch.build.targets.wheel]
packages = ["dnc"]
